# ai-cost-library

./: .gitignore  AGENT_STATE.md  ARABIC_TERMINOLOGY_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAIMS.md  CONTINUATION_PROTOCOL.md  CONTRIBUTING.md  DECISION_MATRIX.md  EVIDENCE_LEDGER.md  GLOSSARY.md  LICENSE  METHODOLOGY.md  NEXT_ACTIONS.md  NO_HYPE_POLICY.md  QUALITY_CHECKLIST.md  RANKING.md  RANKINGS.md  README.md  RELATIONSHIPS.md  RESEARCH_LOG.md  ROADMAP.md  SCORING_SYSTEM.md  SESSION_LOG.md  TAXONOMY_REDESIGN.md  TREE.md  USER_RANKINGS.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_entry.yml
.github/workflows/: validate.yml
comparisons/: README.md  inference-engines.md  lora-vs-qlora-vs-full-finetuning.md  pruning-vs-distillation.md  quantization-methods.md  rag-cost-vs-long-context-cost.md  speculative-decoding-vs-batching.md
data/: backlog.json  categories.json  claims.json  decision_matrix.json  entries.json  evidence.json  fair_ranking.json  glossary.json  project_state.json  scoring.json  session_history.json  sources.json  stats.json  tree.json
internal/: AGENT_STATE.md  NEXT_ACTIONS.md  README.md
library-v1/data-efficiency/: README.md
library-v1/efficient-inference/: README.md
library-v1/efficient-inference/batching/: README.md
library-v1/efficient-inference/early-exit/: README.md
library-v1/efficient-inference/kv-cache/: paged-attention.md  (+1 more)
library-v1/hardware-and-systems/: README.md
library-v1/model-compression/: README.md
library-v1/model-selection-and-routing/: README.md
library-v1/operations-and-monitoring/: README.md
library-v1/retrieval-and-context-efficiency/: README.md
playbooks/: README.md  choose-quantization-method.md  deploy-cheaper-inference.md  fine-tune-on-low-budget.md  reduce-gpu-memory.md  reduce-llm-api-cost.md
scripts/: generate_dashboard.py  generate_fair_ranking.py  sync_metadata.py
templates/: practical-entry-template.md
(+16 files in other folders)
